<resources>
    <string name="app_name">Translator</string>

    <string name="btn_close">Close</string>
    <string name="ttl_connect_fail">Connection failed</string>
    <string name="msg_connect_fail">Failed to connect to the internet</string>
    <string name="btn_translate">Translate</string>
    <string name="btn_swap">Swap</string>
    <string name="edt_input_hint">enter words to translate</string>

    <string name="client_id">translator_android_antoshchuk</string>
    <string name="client_secret">UQd+IyrQxApFFbySGXh2fyP6Vp6YONJ3pIP1H/4RIS0=</string>
    <string name="txt_choose_lang">Choose language</string>
    <string name="txt_app_logo">application logo</string>

    <string name="txt_wait_lang_init">wait\nlanguage initialization in process</string>

    <string name="txt_check_connection">Check your internet connection</string>
    <string name="txt_set_target_lang">Choose concrete target language</string>
    <string name="txt_empty"/>
    <string name="btn_listen">Listen</string>
    <string name="btn_detailed">Detailed</string>

    <string name="sound_fail">failed to produce sound</string>
    <string name="txt_trans_hist_title">Translation history</string>
    <string name="btn_history">History</string>

    <string name="file_trans_history">history_translation</string>

    <string name="txt_del_trans_history">Delete</string>

    <string name="btn_del_lang_history">Delete</string>
    <string name="txt_lang_hist_title">Languages history</string>
    <string name="file_lang_history">history_lang</string>
    <string name="btn_lang_history">Languages</string>
    <string name="txt_stat_info_title">Statistics</string>
    <string name="txt_reset_stats">Reset</string>
    <string name="btn_stats">Stats</string>
    <string name="file_stats">history_stats</string>
    <string name="txt_stat_info_first_used">First used</string>
    <string name="txt_stat_info_last_used">Last used</string>
    <string name="txt_stat_info_words_trans">Words translated</string>
    <string name="txt_stat_info_chars_trans">Chars translated</string>
    <string name="txt_stat_info_src_langs">Source langs used</string>
    <string name="txt_stat_info_trgt_langs">Target langs used</string>
    <string name="txt_trans_history_empty">Your translations history is empty</string>
    <string name="txt_back">Back</string>
    <string name="txt_lang_history_empty">Your languages history is empty</string>
    <string name="txt_source_equal_target">source and target languages are equal</string>
    <string name="txt_empty_input">input is empty</string>
    <string name="txt_choose_target_lang">choose concrete target language</string>
    <string name="txt_detect_lang">Detect Language</string>

    <string-array name="navigation_names">
        <item>Translation history</item>
        <item>Languages history</item>
        <item>Statistics</item>
    </string-array>
</resources>
